--- a/test/expected-React-CSS/index.html
+++ b/test/expected-React-CSS/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        documentation-stylist
+        documentation-hipster
         0.1.0 | Documentation
     </title>
     <script src="bootstrap.bundle.min.js"></script>
@@ -17,7 +17,7 @@
 <body>
     <div class="container d-flex flex-row">
         <div class="position-sticky nav-section list px-2">
-            <h1 class="mt-2 mb-3 me-2">documentation-stylist 0.1.0</h1>
+            <h1 class="mt-2 mb-3 me-2">documentation-hipster 0.1.0</h1>
             <ul class="list-group">
         <li class="list-group-item border-0">
             <div class="d-flex flex-row align-items-center">
