--- a/test/expected-React-classes/index.html
+++ b/test/expected-React-classes/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>
-        documentation-stylist
+        documentation-hipster
         0.1.0 | Documentation
     </title>
     <script src="bootstrap.bundle.min.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="stylist.css" rel="stylesheet">
+    <link href="hipster.css" rel="stylesheet">
         <meta name="description" content="documentation.js Bootstrap Theme with TypeScript and React support">
         <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -17,7 +17,7 @@
 <body>
     <div class="class1">
         <div class="class2">
-            <h1 class="class4">documentation-stylist 0.1.0</h1>
+            <h1 class="class4">documentation-hipster 0.1.0</h1>
             <ul class="class9">
         <li class="class10">
             <div class="class7">
