--- a/test/expected-React-classes/index.html
+++ b/test/expected-React-classes/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>
-        documentation-hipster
-        0.1.0 | Documentation
+        hipster
+        forever-young | Documentation
     </title>
     <script src="bootstrap.bundle.min.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
     <div class="class1">
         <div class="class2">
-            <h1 class="class4">documentation-hipster 0.1.0</h1>
+            <h1 class="class4">hipster forever-young</h1>
             <ul class="class9">
         <li class="class10">
             <div class="class7">
