--- a/test/expected-React-noconf/index.html
+++ b/test/expected-React-noconf/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>
-        documentation-hipster
-        0.1.0 | Documentation
+        hipster
+        forever-young | Documentation
     </title>
     <script src="bootstrap.bundle.min.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
     <div class="container d-flex flex-row">
         <div class="position-sticky nav-section list px-2">
-            <h1 class="mt-2 mb-3 me-2">documentation-hipster 0.1.0</h1>
+            <h1 class="mt-2 mb-3 me-2">hipster forever-young</h1>
             <ul class="list-group">
         <li class="list-group-item border-0">
             <div class="d-flex flex-row align-items-center">
